--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -39,5 +39,6 @@
     "about": "À propos de nous",
     "blog": "Blog"
   },
-  "searchResults": "Résultats de recherche..."
+  "searchResults": "Résultats de recherche...",
+  "addedToCart": "ajouté au panier !"
 }
