--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -40,6 +40,7 @@
     "blog": "Blog"
   },
   "searchResults": "Search Results...",
+  "noItemsFound": "No items found!",
   "addedToCart": "added to Cart!",
   "productDetails": "Product Details",
   "details": {
