--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -40,6 +40,7 @@
     "blog": "Blog"
   },
   "searchResults": "Résultats de recherche...",
+  "noItemsFound": "Aucun article trouvé !",
   "addedToCart": "ajouté au panier !",
   "productDetails": "Détails du produit",
   "details": {
